...
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
            <ImageView
                style="@style/CloseIcon"
                android:src="@drawable/close"
                android:id="@+id/close_icon"
                app:tint="@color/white"
                android:contentDescription="Close story" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
...
                android:layout_height="1dp"
                android:layout_weight="0.5" />

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:id="@+id/capture_button"
                android:src="@drawable/camera_capture_button"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/camera_capture_desc" />

            <View
                android:layout_width="0dp"
...
